[gd_scene load_steps=10 format=3 uid="uid://c5buysxwg5j81"]

[ext_resource type="Texture2D" uid="uid://b3qpfi14383kx" path="res://Art/Endgame.png" id="1_i14kg"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_vruvc"]
[ext_resource type="FontFile" uid="uid://bg4beac7wm06f" path="res://pixel_pirate.ttf" id="2_jhjhv"]
[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="2_wrdxq"]
[ext_resource type="Shader" path="res://Scenes/Menus/MainMenu.gdshader" id="3_e8h0j"]
[ext_resource type="AudioStream" uid="uid://cdwxjmp18qaj8" path="res://Sounds/startGame.mp3" id="6_ke1l7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08al0"]
bg_color = Color(0.814542, 0.531856, 1.34766e-06, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_40peo"]
texture = ExtResource("1_i14kg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v2mvc"]
shader = ExtResource("3_e8h0j")
shader_parameter/height = 5.0
shader_parameter/speed = 5.0
shader_parameter/frequency = 20.0

[node name="MainMenu" type="Control" node_paths=PackedStringArray("startGame")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vruvc")
startGame = NodePath("AudioStreamPlayer2D")

[node name="SettingsMenuCanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="SettingsMenu" type="Control" parent="SettingsMenuCanvasLayer"]
visible = false
visibility_layer = 513
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_wrdxq")

[node name="SettingMenuDimContainer" type="MarginContainer" parent="SettingsMenuCanvasLayer/SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingMenuDim" type="ColorRect" parent="SettingsMenuCanvasLayer/SettingsMenu/SettingMenuDimContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="SettingsMenuCanvasLayer/SettingsMenu"]
visibility_layer = 513
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -232.0
offset_right = -40.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_08al0")

[node name="BackgroundImgPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_40peo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -140.5
offset_right = 140.5
offset_bottom = 140.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_jhjhv")
theme_override_font_sizes/font_size = 25
text = "New Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_jhjhv")
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_jhjhv")
theme_override_font_sizes/font_size = 25
text = "Leaderboard"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_jhjhv")
theme_override_font_sizes/font_size = 25
text = "Credits"

[node name="TitleContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.283951
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="TitleContainer"]
material = SubResource("ShaderMaterial_v2mvc")
layout_mode = 2
theme_override_colors/font_color = Color(0.658824, 0.360784, 0.0470588, 1)
theme_override_fonts/font = ExtResource("2_jhjhv")
theme_override_font_sizes/font_size = 50
text = "Moonwalk The Plank"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ke1l7")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
